# probabilistic-modeling-of-processes

./: README.md
hw_1/gmurman/: CMakeLists.txt
hw_1/gmurman/task_13/: main.cpp
hw_1/gmurman/task_15/: main.cpp
hw_1/gmurman/task_19/: main.cpp
hw_1/gmurman/task_20/: main.cpp
hw_1/gmurman/task_21/: main.cpp
hw_1/gmurman/task_22/: main.cpp
hw_1/gmurman/task_26/: main.cpp
hw_1/gmurman/task_27/: main.cpp
hw_1/gmurman/task_28/: main.cpp
hw_1/gmurman/task_29/: main.cpp
hw_1/gmurman/task_6/: main.cpp
hw_1/gmurman/task_8/: main.cpp
hw_2/gmurman/: CMakeLists.txt
hw_2/gmurman/task_57/: main.cpp
hw_2/gmurman/task_58/: main.cpp
hw_2/gmurman/task_59/: main.cpp
hw_2/gmurman/task_61/: main.cpp
hw_2/gmurman/task_62/: main.cpp
hw_2/gmurman/task_63/: main.cpp
hw_2/gmurman/task_65/: main.cpp
hw_2/gmurman/task_67/: main.cpp
hw_2/gmurman/task_68/: main.cpp
hw_2/gmurman/task_69/: main.cpp
hw_2/gmurman/task_70/: main.cpp
hw_2/part_2/task_2/: CMakeLists.txt  main.cpp
hw_2/part_2/task_3/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  RumorSimulator.cpp  RumorSimulator.h  main.cpp
hw_3/: CMakeLists.txt
hw_3/task_1/: main.cpp
hw_3/task_2/: CMakeLists.txt
hw_3/task_2/core/: simulator.cpp  simulator.h  tree_types.h
hw_3/task_2/src/: main.cpp
hw_3/task_2/ui/: mainwindow.cpp  mainwindow.h  tree_renderer.cpp  tree_renderer.h
hw_3/task_3/include/: input.h  output.h  sim.h
hw_3/task_3/src/: input.cpp  main.cpp  output.cpp  sim.cpp
