cmake_minimum_required(VERSION 3.20)
project(part_1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(task_6 task_6/main.cpp)
add_executable(task_8 task_8/main.cpp)
add_executable(task_13 task_13/main.cpp)
add_executable(task_15 task_15/main.cpp)
add_executable(task_19 task_19/main.cpp)
add_executable(task_20 task_20/main.cpp)
add_executable(task_21 task_21/main.cpp)
add_executable(task_22 task_22/main.cpp)
add_executable(task_26 task_26/main.cpp)
add_executable(task_27 task_27/main.cpp)
add_executable(task_28 task_28/main.cpp)
add_executable(task_29 task_29/main.cpp)
